--- a/about.html
+++ b/about.html
@@ -29,22 +29,45 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/events">Events</a></li>
                 <li><a href="/join">Join Us</a></li>
-                <li><a href="/shop">Store</a></li>
+                <li><a href="/store">Store</a></li>
                 <li><a href="/spaces">Spaces</a></li>
                 <li><a href="/clubs">Clubs</a></li>
-                <li>Committees</li>
+                <li>Committees
+                    <div class="menu-dropdown" id="comittees-dropdown">
+                        <div class="dropdown-item">Wellness</div>
+                        <div class="dropdown-item">Environment</div>
+                    </div>
+                </li>
             </div>
         </ol>
-        <div class="menu-button"></div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div class="menu-mobile-container">
+        <div class="menu-button" id="menu-button">&#8801;</div>
+        <ol class="menu-mobile-items" id="menu-mobile">
+            <li><a href="/about">About</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/join">Join Us</a></li>
+            <li><a href="/store">Store</a></li>
+            <li><a href="/spaces">Spaces</a></li>
+            <li><a href="/clubs">Clubs</a></li>
+            <li> Committees
+                <div class="mobile-dropdown">
+                    <div class="dropdown-item">Wellness</div>
+                    <div class="dropdown-item">Environment</div>
+                </div>
+            </li>
+        </ol>
     </div>
 
     <!-- ABOUT US -->
     <div class="about-container">
         <div class="about-photo">
             <div class="text-backdrop">
-                <div class="title about-title"> 
-                    
-                    ABOUT US 
+                <div class="title about-title">
+
+                    ABOUT US
 
                     <hr class="line-break" style="background-color:white;width:55vw;">
                 </div>
@@ -82,10 +105,15 @@
     </div>
 
     <!-- CULTURES AND TRADITIONS -->
-    <div class="culture-container">
+    <!-- TBD
+
+        <div class="culture-container">
+
         <div class="title">CULTURES & TRADITIONS</div>
         
-    </div>
+        </div> 
+    -->
+
 
     <!-- SPONSORS -->
     <div class="sponsors-container">
@@ -95,7 +123,8 @@
             <a href="https://www.ztr.com/"><img class="sponsor-pic" src="./img/sponsor/ztr.png"></a>
             <a href="https://www.peo.on.ca/"><img class="sponsor-pic" src="./img/sponsor/peo.png"></a>
             <a href="https://www.walkerind.com/"><img class="sponsor-pic" src="./img/sponsor/walker.png"></a>
-            <a href="http://www.cornerstonearchitecture.ca/"><img class="sponsor-pic" src="./img/sponsor/cornerstone.png"></a>
+            <a href="http://www.cornerstonearchitecture.ca/"><img class="sponsor-pic"
+                    src="./img/sponsor/cornerstone.png"></a>
             <a href="https://www.maplesoft.com/"><img class="sponsor-pic" src="./img/sponsor/maple.png"></a>
             <a href="https://chorley.com/"><img class="sponsor-pic" src="./img/sponsor/chorleybisset.png"></a>
             <a href="https://london.ca/"><img class="sponsor-pic" src="./img/sponsor/londong.png"></a>
@@ -114,17 +143,43 @@
         <div class="title">Fee Breakdown</div>
         <br>
 
-        Western Engineering Donation Fee: 
+        <strong>Western Engineering Donation Fee: </strong>
         <br>
-        There is a $150.00 Western Engineering Donation that you and every other undergraduate engineering student can make in addition to your tuition. This is an important donation that goes toward a variety of services and funds built for the betterment of your student experience
+        There is a $150.00 Western Engineering Donation that you and every other undergraduate engineering student can
+        make in addition to your tuition. This is an important donation that goes toward a variety of services and funds
+        built for the betterment of your student experience
         <div class="pie-container">
             <div class="pie-chart">
                 <div class="circle"></div>
-                <div class="pie-ues"></div>
-                <div class="pie-project"></div>
-                <div class="pie-lab"></div>
+                <div id="pie-ues" class="hold">
+                    <div class="circle" id="pie-circle"></div>
+                </div>
+                <div id="pie-project" class="hold">
+                    <div class="circle" id="pie-circle"></div>
+                </div>
+                <div id="pie-lab" class="hold">
+                    <div class="circle" id="pie-circle"></div>
+                </div>
                 <div class="circle-white"></div>
             </div>
+
+            <!-- TEXT -->
+            <div class="pie-text">
+                <div class="pie-ues-text pie-text-box" id="ues-text">
+                    <strong>UES</strong>
+                    <br>
+                    Of the $150.00 donation fee, $20.00 goes toward the Undergraduate Engineering Society(UES). The UES is here to provide you with social and academic services. We also provide you with workshops and events for personal growth and development,while making sure your time at Western is the most memorable experience of your life. That $20.00 helps fund the engineering formal, the yearbooks, the lunch & learns, and everything in between, all with engineering students in mind.
+                </div>
+                <div class="pie-project-text pie-text-box" id="project-text">
+                    <strong>Project Fund</strong>
+                    The purpose of this fund is to enhance the quality of undergraduate education by supporting student projects, groups, teams, clubs and other initiatives to enrich your learning experience. Of the $150.00 from the Donation Fee, $80.00 goes to the project fund. If you are part of a club under the Western Engineering banner, that club has applied for funding from the Project Fund, including WETT, WECCA, EWB, WEFIRST, and the Soph Team, just to name a few. The project fund ensures all Western Engineering clubs can run year-after-year without excessive need for external sponsorship. To see how the Project Fund has historically financed Western Engineering organizations, visit here.
+                </div>
+                <div class="pie-lab-text pie-text-box" id="lab-text">
+                    <strong>Laboratory</strong>
+                    This fee is used to develop and maintain undergraduate laboratories and facilities. Of the$150.00 from the Donation Fee, $50.00 goes to the WESEL Fund. Each year, WESEL uses a portion of this donation to fund new laboratory equipment. The remainder is collected and invested, with the goal that one day we will be able to fund new lab spaces using only the interest earned. In its first three years of existence, WESEL was able to fund the creation of five new, state of the art laboratories.
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -132,10 +187,11 @@
 
     <!-- CONTACT US -->
     <div class="contact-us">
+        <div class="title">Contact Us</div>
 
         <!-- GOOGLE MAP -->
         <div class="ues-map">
-            <iframe height="400" id="gmap_canvas"
+            <iframe height="350" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=1001%20The%20University%20of%20Western%20Ontario%20London,%20Ontario,%20Canada,%20N6A%205B9&t=&z=13&ie=UTF8&iwloc=&output=embed"
                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
             </iframe>
