--- a/shop.html
+++ b/shop.html
@@ -3,157 +3,218 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <title>Western UES</title>
-    <meta name="description" content="Western UES">
-    <meta name="author" content="UES">
+  <title>Western UES</title>
+  <meta name="description" content="Western UES">
+  <meta name="author" content="UES">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
-        <!-- MENU -->
-        <div class="menu-container">
-            <ol>
-                <a href="/"><img src="img/logo.png" class="menu-image"></a>
-                <div class="menu-items">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/events">Events</a></li>
-                    <li><a href="/join">Join Us</a></li>
-                    <li><a href="/shop">Store</a></li>
-                    <li><a href="/spaces">Spaces</a></li>
-                    <li><a href="/clubs">Clubs</a></li>
-                    <li>Committees</li>
-                </div>
-            </ol>
-            <div class="menu-button"></div>
-        </div>
+  <!-- MENU -->
+  <div class="menu-container">
+    <ol>
+      <a href="/"><img src="img/logo.png" class="menu-image"></a>
+      <div class="menu-items">
+        <li><a href="/about">About</a></li>
+        <li><a href="/events">Events</a></li>
+        <li><a href="/join">Join Us</a></li>
+        <li><a href="/shop">Store</a></li>
+        <li><a href="/spaces">Spaces</a></li>
+        <li><a href="/clubs">Clubs</a></li>
+        <li>Committees</li>
+      </div>
+    </ol>
+    <div class="menu-button"></div>
+  </div>
 
+  <!-- STORE -->
+  <div class="title">+/- STORE</div>
+  <hr class="line-break">
 
-        <div id='collection-component-1625699108068'></div>
-<script type="text/javascript">
-/*<![CDATA[*/
-(function () {
-  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-  if (window.ShopifyBuy) {
-    if (window.ShopifyBuy.UI) {
-      ShopifyBuyInit();
-    } else {
-      loadScript();
-    }
-  } else {
-    loadScript();
-  }
-  function loadScript() {
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = scriptURL;
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-    script.onload = ShopifyBuyInit;
-  }
-  function ShopifyBuyInit() {
-    var client = ShopifyBuy.buildClient({
-      domain: 'ues-engineering-store.myshopify.com',
-      storefrontAccessToken: '82007fe77be75c46665dd819d95e9b7d',
-    });
-    ShopifyBuy.UI.onReady(client).then(function (ui) {
-      ui.createComponent('collection', {
-        id: '268851314884',
-        node: document.getElementById('collection-component-1625699108068'),
-        moneyFormat: '%24%7B%7Bamount%7D%7D',
-        options: {
-  "product": {
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "calc(25% - 20px)",
-          "margin-left": "20px",
-          "margin-bottom": "50px",
-          "width": "calc(25% - 20px)"
-        },
-        "img": {
-          "height": "calc(100% - 15px)",
-          "position": "absolute",
-          "left": "0",
-          "right": "0",
-          "top": "0"
-        },
-        "imgWrapper": {
-          "padding-top": "calc(75% + 15px)",
-          "position": "relative",
-          "height": "0"
+  Engineering Jacket
+
+  <br>
+  <img src="img/shop/jacket2.jpg" class="store-photo">
+  <br>
+  COVID-19 Update:
+  Jackets were available for pickup March 9-10, 2020. Due to the current situation, jacket pickup is temporarily
+  postponed until September. Any additional updates will be posted on Facebook @westernues
+
+  When:
+  Leather jackets are sold twice a year, once at the beginning of the Fall semester and once at the beginning of the
+  Winter semester. Keep an eye on the announcements during these times so you don’t miss the day!
+
+  Where:
+  Sales, Sizing, and Pickup all occur in the UES Lounge (SEB 1001)
+
+  Cost:
+  Jackets will cost $435 in the 2019-2020 year, You can add 1-2 inside mickey pockets for an additional $10 each (Highly
+  recommended). Purchase can be done via Cash, Cheque, or Credit and the price includes tax
+
+  Boilersuit
+  <br>
+  <img src="img/shop/boilersuit.png" class="store-photo">
+  <br>
+  Boilersuits are grey coveralls. The tradition of coveralls in Engineering began in the 1960s in Sweden and Finland.
+  Their original purpose was to be worn when students visited companies but evolved into being used for partying and to
+  identify their department. These coveralls were eventually adopted by schools in Canada.
+
+  Boilersuits are a tradition at Western Engineering giving students an opportunity to show their Engineering spirit and
+  pride. Students who are involved in the Eng community are awarded a Boilersuit and become a part of this fun
+  tradition.
+
+  The goal of the suit is to be a visual representation of your time as an Engineering student by sewing on patches
+  detailing your interests, events and clubs. They are also worn to conferences where patch trading with other schools
+  allows you to meet new people and add to your suit. The Boilersuits also host events that give Boilersuits a fun way
+  to socialize with like-minded students. Check back soon to this page for updated information on how you can apply to
+  be a Boilersuit this year!
+
+  <!-- PRODUCTS -->
+  <div id='collection-component-1625699108068'></div>
+
+  <!-- FOOTER -->
+  <div class="footer">
+    <div class="footer-text">
+      © Western UES 2021
+    </div>
+    <div class="footer-other">
+      <a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Public Resources</a>
+    </div>
+
+    <div class="footer-socials">
+      <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
+      <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+      <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+      <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    /*<![CDATA[*/
+    (function () {
+      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+      if (window.ShopifyBuy) {
+        if (window.ShopifyBuy.UI) {
+          ShopifyBuyInit();
+        } else {
+          loadScript();
         }
-      },
-      "button": {
-        "border-radius": "28px"
+      } else {
+        loadScript();
       }
-    },
-    "text": {
-      "button": "Add to cart"
-    }
-  },
-  "productSet": {
-    "styles": {
-      "products": {
-        "@media (min-width: 601px)": {
-          "margin-left": "-20px"
-        }
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
       }
-    }
-  },
-  "modalProduct": {
-    "contents": {
-      "img": false,
-      "imgWithCarousel": true,
-      "button": false,
-      "buttonWithQuantity": true
-    },
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "100%",
-          "margin-left": "0px",
-          "margin-bottom": "0px"
-        }
-      },
-      "button": {
-        "border-radius": "28px"
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'ues-engineering-store.myshopify.com',
+          storefrontAccessToken: '82007fe77be75c46665dd819d95e9b7d',
+        });
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('collection', {
+            id: '268851314884',
+            node: document.getElementById('collection-component-1625699108068'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
+              "product": {
+                "styles": {
+                  "product": {
+                    "@media (min-width: 601px)": {
+                      "max-width": "calc(25% - 20px)",
+                      "margin-left": "20px",
+                      "margin-bottom": "50px",
+                      "width": "calc(25% - 20px)"
+                    },
+                    "img": {
+                      "height": "calc(100% - 15px)",
+                      "position": "absolute",
+                      "left": "0",
+                      "right": "0",
+                      "top": "0"
+                    },
+                    "imgWrapper": {
+                      "padding-top": "calc(75% + 15px)",
+                      "position": "relative",
+                      "height": "0"
+                    }
+                  },
+                  "button": {
+                    "border-radius": "28px"
+                  }
+                },
+                "text": {
+                  "button": "Add to cart"
+                }
+              },
+              "productSet": {
+                "styles": {
+                  "products": {
+                    "@media (min-width: 601px)": {
+                      "margin-left": "-20px"
+                    }
+                  }
+                }
+              },
+              "modalProduct": {
+                "contents": {
+                  "img": false,
+                  "imgWithCarousel": true,
+                  "button": false,
+                  "buttonWithQuantity": true
+                },
+                "styles": {
+                  "product": {
+                    "@media (min-width: 601px)": {
+                      "max-width": "100%",
+                      "margin-left": "0px",
+                      "margin-bottom": "0px"
+                    }
+                  },
+                  "button": {
+                    "border-radius": "28px"
+                  }
+                },
+                "text": {
+                  "button": "Add to cart"
+                }
+              },
+              "option": {},
+              "cart": {
+                "styles": {
+                  "button": {
+                    "border-radius": "28px"
+                  }
+                },
+                "text": {
+                  "total": "Subtotal",
+                  "button": "Checkout"
+                }
+              },
+              "toggle": {}
+            },
+          });
+        });
       }
-    },
-    "text": {
-      "button": "Add to cart"
-    }
-  },
-  "option": {},
-  "cart": {
-    "styles": {
-      "button": {
-        "border-radius": "28px"
-      }
-    },
-    "text": {
-      "total": "Subtotal",
-      "button": "Checkout"
-    }
-  },
-  "toggle": {}
-},
-      });
-    });
-  }
-})();
+    })();
 /*]]>*/
-</script>
+  </script>
 
-    <script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 
-    
+
 </body>
+
 </html>
