--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="dropdown-item"><a href="/about">Contact Us</a></div>
                     </div>
                 </li>
-                <li class="menu-join">
+                <li id="menu-join">
                     <a href="/join">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
                         <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
