menu basic structure complete

--- a/about.html
+++ b/about.html
@@ -4,15 +4,14 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>Western UES</title>
     <meta name="description" content="Western UES">
     <meta name="author" content="UES">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -168,15 +167,30 @@
                 <div class="pie-ues-text pie-text-box" id="ues-text">
                     <strong>UES</strong>
                     <br>
-                    Of the $150.00 donation fee, $20.00 goes toward the Undergraduate Engineering Society(UES). The UES is here to provide you with social and academic services. We also provide you with workshops and events for personal growth and development,while making sure your time at Western is the most memorable experience of your life. That $20.00 helps fund the engineering formal, the yearbooks, the lunch & learns, and everything in between, all with engineering students in mind.
+                    Of the $150.00 donation fee, $20.00 goes toward the Undergraduate Engineering Society(UES). The UES
+                    is here to provide you with social and academic services. We also provide you with workshops and
+                    events for personal growth and development,while making sure your time at Western is the most
+                    memorable experience of your life. That $20.00 helps fund the engineering formal, the yearbooks, the
+                    lunch & learns, and everything in between, all with engineering students in mind.
                 </div>
                 <div class="pie-project-text pie-text-box" id="project-text">
                     <strong>Project Fund</strong>
-                    The purpose of this fund is to enhance the quality of undergraduate education by supporting student projects, groups, teams, clubs and other initiatives to enrich your learning experience. Of the $150.00 from the Donation Fee, $80.00 goes to the project fund. If you are part of a club under the Western Engineering banner, that club has applied for funding from the Project Fund, including WETT, WECCA, EWB, WEFIRST, and the Soph Team, just to name a few. The project fund ensures all Western Engineering clubs can run year-after-year without excessive need for external sponsorship. To see how the Project Fund has historically financed Western Engineering organizations, visit here.
+                    The purpose of this fund is to enhance the quality of undergraduate education by supporting student
+                    projects, groups, teams, clubs and other initiatives to enrich your learning experience. Of the
+                    $150.00 from the Donation Fee, $80.00 goes to the project fund. If you are part of a club under the
+                    Western Engineering banner, that club has applied for funding from the Project Fund, including WETT,
+                    WECCA, EWB, WEFIRST, and the Soph Team, just to name a few. The project fund ensures all Western
+                    Engineering clubs can run year-after-year without excessive need for external sponsorship. To see
+                    how the Project Fund has historically financed Western Engineering organizations, visit here.
                 </div>
                 <div class="pie-lab-text pie-text-box" id="lab-text">
                     <strong>Laboratory</strong>
-                    This fee is used to develop and maintain undergraduate laboratories and facilities. Of the$150.00 from the Donation Fee, $50.00 goes to the WESEL Fund. Each year, WESEL uses a portion of this donation to fund new laboratory equipment. The remainder is collected and invested, with the goal that one day we will be able to fund new lab spaces using only the interest earned. In its first three years of existence, WESEL was able to fund the creation of five new, state of the art laboratories.
+                    This fee is used to develop and maintain undergraduate laboratories and facilities. Of the$150.00
+                    from the Donation Fee, $50.00 goes to the WESEL Fund. Each year, WESEL uses a portion of this
+                    donation to fund new laboratory equipment. The remainder is collected and invested, with the goal
+                    that one day we will be able to fund new lab spaces using only the interest earned. In its first
+                    three years of existence, WESEL was able to fund the creation of five new, state of the art
+                    laboratories.
                 </div>
             </div>
 
