--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <a href=""><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
-                    <a href="/about">Western</a>
+                    <a href="/about" class="menu-top-item">Western</a>
                     <div class="menu-dropdown" id="western-dropdown">
                         <div class="dropdown-item"><a href="/about">About Us</a></div>
                         <div class="dropdown-item"><a href="/about#culture">Culture</a></div>
-                        <div class="dropdown-item"><a href="/about#contact">Contact Us</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="/about#contact">Contact Us</a></div>
                     </div>
                 </li>
                 <li id="menu-join">
-                    <a href="/join">Join Us</a>
+                    <a href="/join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
                         <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
                         <div class="dropdown-item"><a href="">Conferences</a></div>
@@ -41,44 +41,44 @@
                         <div class="dropdown-item"><a href="">Wellness Committee</a></div>
                         <div class="dropdown-item"><a href="">Sustainability Committee</a></div>
                         <div class="dropdown-item"><a href="">Discord Committee</a></div>
-                        <div class="dropdown-item"><a href="">Blogs</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
                     </div>
                 </li>
                 <li id="menu-council">
-                    <a href="/team">Council</a>
+                    <a href="/team" class="menu-top-item">Council</a>
                     <div class="menu-dropdown" id="council-dropdown">
                         <div class="dropdown-item"><a href="/team">Operations</a></div>
                         <div class="dropdown-item"><a href="/team">Our Team</a></div>
-                        <div class="dropdown-item"><a href="">Elections</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
                     </div>
                 </li>
                 <li id="menu-admin">
-                    <a href="/admin">Admin</a>
+                    <a href="/admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
                         <div class="dropdown-item"><a href="/team">Council Resources</a></div>
                         <div class="dropdown-item"><a href="/team">Exec Updates</a></div>
                         <div class="dropdown-item"><a href="">Finances</a></div>
                         <div class="dropdown-item"><a href="">Governing Docs</a></div>
-                        <div class="dropdown-item"><a href="">SRA</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
                 </li>
                 <li id="menu-store">
-                    <a href="/store">Eng Merch</a>
+                    <a href="/store" class="menu-top-item">Eng Merch</a>
                     <div class="menu-dropdown" id="store-dropdown">
                         <div class="dropdown-item"><a href="/shop">+/- Store</a></div>
                         <div class="dropdown-item"><a href="/jacket">Boilersuits</a></div>
-                        <div class="dropdown-item"><a href="/jacket">Eng Jackets</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="/jacket">Eng Jackets</a></div>
                     </div>
                 </li>
                 <li id="menu-coop">
-                    <a href="/coop">Co-op</a>
+                    <a href="/coop" class="menu-top-item">Co-op</a>
                     <div class="menu-dropdown" id="coop-dropdown">
-                        <div class="dropdown-item"><a href="">Academic Resources</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Academic Resources</a></div>
                     </div>
                 </li>
                 <li id="menu-campaign">
-                    <a href="/campaign">EDI</a>
+                    <a href="/campaign" class="menu-top-item">EDI</a>
                     <div class="menu-dropdown" id="campaign-dropdown">
-                        <div class="dropdown-item"><a href="">Action Plan</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Action Plan</a></div>
                     </div>
                 </li>
             </div>
@@ -118,7 +118,7 @@
     <div class="main-carousel">
 
         <div class="slide slide1" id="slide1">
-            <div class="slide-background">
+            <div class="slide-background1">
                 <div class="slide-text">
                     <div class="slide-text-title">
                         <img src="./img/logo_white.png" width=100px>
@@ -135,7 +135,7 @@
         </div>
 
         <div class="slide slide2" id="slide2">
-            <div class="slide-background">
+            <div class="slide-background2">
                 <div class="slide-text">
                     <div class="slide-text-title">
                         Western UES
@@ -148,7 +148,7 @@
         </div>
 
         <div class="slide slide3" id="slide3">
-            <div class="slide-background">
+            <div class="slide-background3">
                 <div class="slide-text">
                     <div class="slide-text-title">
                         Eng Jackets
