--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- MENU -->
     <div class="menu-container">
         <ol>
-            <a href=""><img src="img/logo.png" class="menu-image"></a>
+            <a href="/"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
                     <a href="/about" class="menu-top-item">Western</a>
@@ -222,7 +222,7 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        <a href="" class="footer-image">
+        <a href="/" class="footer-image">
             <img src="./img/logo_white.png" height="30px">
             <span style="margin-left:10px;">Western UES</span>
         </a>
@@ -239,6 +239,7 @@
     </div>
 
     <script src="./js/script.js"></script>
+
 </body>
 
 </html>
