--- a/join.html
+++ b/join.html
@@ -24,39 +24,148 @@
         <ol>
             <a href="/"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
-                <li><a href="/about">About</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/join">Join Us</a></li>
-                <li><a href="/shop">Store</a></li>
-                <li><a href="/spaces">Spaces</a></li>
-                <li><a href="/clubs">Clubs</a></li>
-                <li>Committees</li>
+                <li id="menu-about">
+                    <a href="/about" class="menu-top-item">Western</a>
+                    <div class="menu-dropdown" id="western-dropdown">
+                        <div class="dropdown-item"><a href="/about">About Us</a></div>
+                        <div class="dropdown-item"><a href="/about#culture">Culture</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="/about#contact">Contact Us</a></div>
+                    </div>
+                </li>
+                <li id="menu-join">
+                    <a href="/join" class="menu-top-item">Join Us</a>
+                    <div class="menu-dropdown" id="join-dropdown">
+                        <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
+                        <div class="dropdown-item"><a href="">Conferences</a></div>
+                        <div class="dropdown-item"><a href="">Events</a></div>
+                        <div class="dropdown-item"><a href="">Wellness Committee</a></div>
+                        <div class="dropdown-item"><a href="">Sustainability Committee</a></div>
+                        <div class="dropdown-item"><a href="">Discord Committee</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
+                    </div>
+                </li>
+                <li id="menu-council">
+                    <a href="/team" class="menu-top-item">Council</a>
+                    <div class="menu-dropdown" id="council-dropdown">
+                        <div class="dropdown-item"><a href="/team">Operations</a></div>
+                        <div class="dropdown-item"><a href="/team">Our Team</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
+                    </div>
+                </li>
+                <li id="menu-admin">
+                    <a href="/admin" class="menu-top-item">Admin</a>
+                    <div class="menu-dropdown" id="admin-dropdown">
+                        <div class="dropdown-item"><a href="/team">Council Resources</a></div>
+                        <div class="dropdown-item"><a href="/team">Exec Updates</a></div>
+                        <div class="dropdown-item"><a href="">Finances</a></div>
+                        <div class="dropdown-item"><a href="">Governing Docs</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
+                </li>
+                <li id="menu-store">
+                    <a href="/store" class="menu-top-item">Eng Merch</a>
+                    <div class="menu-dropdown" id="store-dropdown">
+                        <div class="dropdown-item"><a href="/shop">+/- Store</a></div>
+                        <div class="dropdown-item"><a href="/jacket">Boilersuits</a></div>
+                        <div class="dropdown-item menu-bottom-item"><a href="/jacket">Eng Jackets</a></div>
+                    </div>
+                </li>
+                <li id="menu-coop">
+                    <a href="/coop" class="menu-top-item">Co-op</a>
+                    <div class="menu-dropdown" id="coop-dropdown">
+                        <div class="dropdown-item menu-bottom-item"><a href="">Academic Resources</a></div>
+                    </div>
+                </li>
+                <li id="menu-campaign">
+                    <a href="/campaign" class="menu-top-item">EDI</a>
+                    <div class="menu-dropdown" id="campaign-dropdown">
+                        <div class="dropdown-item menu-bottom-item"><a href="">Action Plan</a></div>
+                    </div>
+                </li>
             </div>
         </ol>
-        <div class="menu-button"></div>
     </div>
 
-    <!-- GET INVOLVED -->
+    <!-- Mobile Menu -->
+    <div class="menu-mobile-container">
+        <div class="menu-button" id="menu-button">&#8801;</div>
+        <ol class="menu-mobile-items" id="menu-mobile">
+            <li><a href="/about">About</a></li>
+            <li><a href="/events">Events</a></li>
+            <li><a href="/join">Join Us</a></li>
+            <li><a href="/store">Store</a></li>
+            <li><a href="/spaces">Spaces</a></li>
+            <li><a href="/clubs">Clubs</a></li>
+            <li> Committees
+                <div class="mobile-dropdown">
+                    <div class="dropdown-item">Wellness</div>
+                    <div class="dropdown-item">Environment</div>
+                </div>
+            </li>
+        </ol>
+    </div>
 
+
+    <!-- SIGN UP FOR NOTIFICATIONS-->
+    Sign up to be notified for UES updates and applications!
+    TBD
+
+    <!-- GET INVOLVED -->
+    <div class="conferences-container">
+        <div class="title conferences-title">Conferences</div>
+
+        <div class="conference-box">
+            <div class="conference-name">Engineering Student Societies’ Council of Ontario</div>
+            <div class="conference-mission">
+                Mission
+                <div class="conference-mission-text">
+                    Since its creation in 1987, ESSCO’s goal has been to promote “unity, continuity, and visibility
+                    among Ontario
+                    engineering students”.
+                </div>
+            </div>
+            <div class="conference-objective">
+                Objective
+                <div class="conference-objective-text">
+                    1. To represent undergraduate engineering students in the province of Ontario in matters of common
+                    interest, and
+                    communicate with professional associations, academia, industry and government on behalf of member
+                    schools, but
+                    never to: 1. Align with partisan organizations; or 2. Become involved in issues not directly related
+                    to
+                    engineering education and practice;
+                    <br>
+                    2. To facilitate centralized communication and information exchange between member engineering
+                    student
+                    societies, assist them in increasing their value to the common student;
+                    <br>
+                    3. To promote and assist other organizations in promoting engineering as an exciting, challenging,
+                    and equitable
+                    profession, especially to high school and elementary school students.
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <div class="footer">
+        <a href="/" class="footer-image">
+            <img src="./img/logo_white.png" height="30px">
+            <span style="margin-left:10px;">Western UES</span>
+        </a>
         <div class="footer-text">
-            © Western UES 2021
-        </div>
-        <div class="footer-other">
-            <a href="https://drive.google.com/drive/folders/1lU_kL6YZFE7iFjf69v10A3VZHE8471Ge">Public Resources</a>
+            © 2021 Western UES
         </div>
 
         <div class="footer-socials">
             <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
-    <script src="js/scripts.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
+
 </html>
